fixed header text being too big

--- a/app/assets/stylesheets/custom/partials/_buck.css.sass
+++ b/app/assets/stylesheets/custom/partials/_buck.css.sass
@@ -78,6 +78,9 @@
 		position: absolute
 		top: calc(50% - 1px)
 
+		@media (max-width: $screen-sm)
+			width: 125px
+
 	&::before
 		right: calc(50% + 20px)
 
