--- a/app/assets/stylesheets/custom/partials/_header.css.sass
+++ b/app/assets/stylesheets/custom/partials/_header.css.sass
@@ -55,6 +55,9 @@ header
 		letter-spacing: 3px
 		text-shadow: 0 0 25px #000
 
+		@media (max-width: $screen-sm)
+			font-size: 75px
+
 	span
 		font-size: 50%
 		display: block
